--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 logging:
   level:
-   root: debug
+   root: info
   path: /tmp/log.log
 
 spring:
@@ -12,5 +12,4 @@ spring:
       database-platform: org.hibernate.dialect.MySQL5Dialect
       hibernate:
         use-new-id-generator-mappings: false
-      #show-sql: true
-
+      show-sql: true
