--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,3 +13,8 @@ spring:
       hibernate:
         use-new-id-generator-mappings: false
       show-sql: true
+
+socks5:
+  host: 192.168.31.135
+  port: 1080
+  enabled: true
