--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ logging:
 
 spring:
     datasource:
-      url: jdbc:mysql://192.168.31.135:3309/coin?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true
+      url: jdbc:mysql://localhost:3309/coin?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true
       username: root
       password: admin
     jpa:
